<resources>
    <string name="app_name">Chefable</string>
    <string name="host">https://spoonacular.com/</string>
    <string name="recipe_host">https://spoonacular.com/recipes/</string>
    <string name="back_button">Back</string>
    <string name="ingredient_list">Ingredient List</string>
    <string name="search_button">Search</string>
    <string name="setting_button">Settings</string>
    <string name="add_favorites">Add to Favorites</string>
    <string name="view_favorites">View Favorites</string>
    <string name="submit">Submit</string>
    <string name="remove_ingred">Remove Ingredient</string>
    <string name="remove_fav">Remove Favorite</string>
    <string name="view">View</string>
</resources>