<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Favorites">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35dp"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        />

    <ListView android:id="@+id/list_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:choiceMode="singleChoice">
    </ListView>
    <TableRow>
        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="Home_Intent"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/delete_fav_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/remove_fav"
            android:onClick="RemoveFav_Action"/>

        <Button
            android:id="@+id/view_fav_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/view"
            android:onClick="ViewWeb_Intent"/>
    </TableRow>
</TableLayout>